[package]

name = "dht"
description = "Implementation of Kademlia-based DHT in Rust"
version = "0.0.1"
authors = ["Dmitry Tantsur <divius.inside@gmail.com>"]
homepage = "https://github.com/divius/rust-dht"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]

log = "0.3.1"
num = "0.1.25"
rand = "0.3.8"
rustc-serialize = "0.3.15"

[lib]

name = "dht"
path = "src/lib.rs"
