[package]

name = "dht"
description = "Implementation of Kademlia-based DHT in Rust"
version = "0.0.6"
authors = ["Dmitry Tantsur <divius.inside@gmail.com>"]
homepage = "https://github.com/dtantsur/rust-dht"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]

log = "^0.4"
rand = "^0.5"
rustc-serialize = "^0.3"

[lib]

name = "dht"
path = "src/lib.rs"
